objects/Compensation_Estimator_Goal__c.object
<CustomObject>
    <description>Stores values for the goals used in the Sales Compensation Estimator (Calculator).  Goals are typically used to calculate percent attainment across lines of business.  Goals are only applicable for new business, but not renewals</description>
    <fields>
        <fullName>Actual_Persistency__c</fullName>
        <formula>IF((Annual_Renewals__c +  Annual_Cancellations__c = 0),0, Annual_Renewals__c / (Annual_Renewals__c +  Annual_Cancellations__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Persistency %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Cancellations__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter anticipated annual Cancellations</inlineHelpText>
        <label>Annual Cancellations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Renewals__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter anticipated annual Renewals</inlineHelpText>
        <label>Annual Renewals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CEG_Last_Viewed__c</fullName>
        <formula>Estimation_Summary__c  = Left( $Setup.Last_Viewed_Compensation_Estimator__c.Compensation_Estimator_Id__c , 15)</formula>
        <label>CEG Last Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimation_Summary__c</fullName>
        <label>Compensation Estimation Summary</label>
        <referenceTo>Compensation_Estimator__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Compensation_Estimator_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Goal_Entry_Status__c</fullName>
        <formula>If( or( ISBLANK( Goal__c ), Goal__c = 0), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 10, 10)&amp;&quot; Enter Goal&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 10)&amp;&quot; Goal Entered&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Entry Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Displays the annual goal for a particular line of business.  Does NOT account for different goals across individual products, but instead is one aggregate for a LOB (e.g. Medical, Dental, Life, etc)</inlineHelpText>
        <label>Annual Goal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Supplemental</fullName>
                </value>
                <value>
                    <fullName>Year-End Persistency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Renewal_Target_Commission__c</fullName>
        <formula>If(  OR( ISBLANK(Persistency_Goal__c), Persistency_Goal__c = 0),0, 

Estimation_Summary__r.Renewal_Medical_Commission__c * 0.20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Target Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <formula>Estimation_Summary__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Goal_YTD__c</fullName>
        <formula>If( OR( Goal__c = 0, ISBLANK(Goal__c)), 0,

If ( TEXT(Unit_of_Measure__c) = &quot;Members&quot;, YTD_Members__c/Goal__c,

If ( TEXT(Unit_of_Measure__c) = &quot;Premium&quot;, YTD_Premiums__c/Goal__c, 0

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Annual Goal YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Target_Payout__c</fullName>
        <defaultValue>0</defaultValue>
        <label>% Target Payout</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Persistency_Bonus_Payment1_del__c</fullName>
        <formula>If (  OR( ISBLANK(Persistency_Goal__c),  Persistency_Goal__c = 0), 0,

If(  Actual_Persistency__c = 1,  Medical_Renewal_Target_Commission__c * 2.5,

  Percentage_of_Target_Payout__c  * Medical_Renewal_Target_Commission__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzz DELETE Persistency Bonus Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Persistency_Bonus_Payment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Persistency Bonus Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Persistency_Goal_Status__c</fullName>
        <formula>If( or( ISBLANK( Persistency_Goal__c ), Persistency_Goal__c = 0), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 10, 10)&amp;&quot; Enter Persistency Goal&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 10)&amp;&quot; Persistency Goal Entered&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Persistency Goal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persistency_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Persistency Goal</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Persistency_Renewal_Medical_Comm_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Persistency Renewal Medical Comm Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prorated_YTD_Goal_Formula__c</fullName>
        <formula>Goal__c *((MONTH(TODAY())-1)*30 + DAY(TODAY()))/360</formula>
        <label>zzz DELETE Prorated YTD Goal Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prorated_YTD_Goal__c</fullName>
        <label>Prorated YTD Goal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Set__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refresh YTD Sold And Prorated Goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Members</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YTD_Members__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Displays the year-to-date member count for related Opportunities</inlineHelpText>
        <label>YTD Members Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Premiums__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Premiums Sold</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>above_or_below_goal_del_del__c</fullName>
        <formula>Actual_Persistency__c - Persistency_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the percent of goal attained used to calculate how much of the target bonus to pay.  View the table above for the ranges</inlineHelpText>
        <label>% Above / Below Goal</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Compensation Estimator Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Unit_of_Measure__c</columns>
        <columns>Goal__c</columns>
        <columns>Prorated_YTD_Goal_Formula__c</columns>
        <columns>YTD_Members__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Included__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CEG_Last_Viewed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Members_Goals</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>Goal__c</columns>
        <columns>Prorated_YTD_Goal__c</columns>
        <columns>YTD_Members__c</columns>
        <columns>Percentage_of_Goal_YTD__c</columns>
        <columns>Goal_Entry_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Included__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CEG_Last_Viewed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Unit_of_Measure__c</field>
            <operation>equals</operation>
            <value>Members</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Compensation_Estimator_Goal__c.Compensation_Goal</value>
        </filters>
        <label>Member Goals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Premium_Goals</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>Goal__c</columns>
        <columns>Prorated_YTD_Goal__c</columns>
        <columns>YTD_Premiums__c</columns>
        <columns>Percentage_of_Goal_YTD__c</columns>
        <columns>Goal_Entry_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Included__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CEG_Last_Viewed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Unit_of_Measure__c</field>
            <operation>equals</operation>
            <value>Premium</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Compensation_Estimator_Goal__c.Compensation_Goal</value>
        </filters>
        <label>Premium Goals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Year_End_Persistency</fullName>
        <columns>Persistency_Goal__c</columns>
        <columns>Annual_Renewals__c</columns>
        <columns>Annual_Cancellations__c</columns>
        <columns>Actual_Persistency__c</columns>
        <columns>Persistency_Goal_Status__c</columns>
        <columns>Persistency_Bonus_Payment__c</columns>
        <columns>Percentage_of_Target_Payout__c</columns>
        <columns>above_or_below_goal_del_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEG_Last_Viewed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Year-End Persistency</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Compensation_Estimator_Goal__c.Compensation_Persistency</value>
        </filters>
        <label>Year-End Persistency</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CG-{0000}</displayFormat>
        <label>Unique ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensation Estimator Goals</pluralLabel>
    <recordTypes>
        <fullName>Compensation_Goal</fullName>
        <active>true</active>
        <label>Compensation Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Compensation_Persistency</fullName>
        <active>true</active>
        <label>Compensation Persistency</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>